syntax = "proto3";
package auth.v1;

import "google/protobuf/empty.proto";

message SendVerificationCodeRequest {
  string email = 1;
}

message RegisterRequest {
  string email_or_phone_number = 1;
  string password = 2;
  string verification_code = 3;
  optional string display_name = 4;
}

service AuthService {
  rpc SendVerificationCode(SendVerificationCodeRequest) returns (google.protobuf.Empty);
  rpc Register(RegisterRequest) returns (google.protobuf.Empty);
}