syntax = "proto3";
package user.v1;

import "google/protobuf/timestamp.proto";

message UserInfo {
    string id = 1;
    string email = 2;
    string display_name = 3;
    string phone_number = 4;
    bool is_email_verified = 5;
    bool is_phone_number_verified = 6;
    google.protobuf.Timestamp created_at = 7;
    google.protobuf.Timestamp updated_at = 8;
    string created_by = 9;
    string updated_by = 10;
    google.protobuf.Timestamp last_login_at = 11;
    string user_name = 12;
}
